--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
 		<weka.version>3.8.3</weka.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>ipdNexus-public-releases</id>
+			<name>IPD-Repository</name>
+			<url>http://bob.ipd.kit.edu/nexus/repository/maven-public-releases</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
