--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		   <groupId>com.esotericsoftware</groupId>
+		   <artifactId>kryo</artifactId>
+		   <version>5.0.0-RC4</version>
+		</dependency>
 	</dependencies>
 
 
