--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		   <groupId>com.esotericsoftware</groupId>
-		   <artifactId>kryo</artifactId>
-		   <version>5.0.0-RC4</version>
+		    <groupId>de.ruedigermoeller</groupId>
+		    <artifactId>fst</artifactId>
+		    <version>2.56</version>
 		</dependency>
 	</dependencies>
 
