--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 	</parent>
 	<artifactId>wikiWSDClassifier</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>WSD</name>
+	<name>WikiWSD classifier</name>
+	<description>Classifier for WSD using Wiki and helper/utility classes to use the classifier</description>
 
 	<properties>
 		<weka.version>3.8.3</weka.version>
