--- a/pom.xml
+++ b/pom.xml
@@ -1,49 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>edu.kit.ipd.parse</groupId>
-		<artifactId>parse</artifactId>
-		<version>0.0.4</version>
-	</parent>
-	<artifactId>wikiWSDClassifier</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>WikiWSD classifier</name>
-	<description>Classifier for WSD using Wiki and helper/utility classes to use the classifier</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>edu.kit.ipd.parse</groupId>
+        <artifactId>parse</artifactId>
+        <version>0.0.5-SNAPSHOT</version>
+    </parent>
+    <artifactId>wikiWSDClassifier</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>WikiWSD classifier</name>
+    <description>Classifier for WSD using Wiki and helper/utility classes to use the classifier
+    </description>
 
-	<properties>
-		<weka.version>3.8.3</weka.version>
-	</properties>
+    <properties>
+        <weka.version>3.8.3</weka.version>
+    </properties>
 
-	<repositories>
-		<repository>
-			<id>ipdNexus-public-releases</id>
-			<name>IPD-Repository</name>
-			<url>http://bob.ipd.kit.edu/nexus/repository/maven-public-releases</url>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>ipdNexus-public-releases</id>
+            <name>IPD-Repository</name>
+            <url>http://bob.ipd.kit.edu/nexus/repository/maven-public-releases</url>
+        </repository>
+    </repositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-stable</artifactId>
-			<version>${weka.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>de.ruedigermoeller</groupId>
-		    <artifactId>fst</artifactId>
-		    <version>2.56</version>
-		</dependency>
-	</dependencies>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>nz.ac.waikato.cms.weka</groupId>
+            <artifactId>weka-stable</artifactId>
+            <version>${weka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+            <version>2.56</version>
+        </dependency>
+    </dependencies>
 </project>
